New explanation tree-based output (#356)
* Refactor many names in meaning tree layer

* Upgrade meaning tree version

* Update DT domain for expression app domain

* Add new explanation tree-based output

* New skill that conforms with earlyfinish tree

* Temporary changes that break CtrlFlow domain

* Style minor fixes

* Revert no_strict tree changes in DT

* Fix DT explanation strings

* Explanation obtaining improvements

* Add support for many violation laws in feedback

* Frontend update

* Fix DT domain unit test

* Update decision trees for expression DT domain

* Disable supplementary questions due to broken question-gen library

* Improve meaning tree compatibility layer methods

* Generator logic enhancement

* Bump meaning tree version

* Fix critical operand value generation error

* Improve docs and refactor methods

* Some comma & case fixes in DT's error messages

* Decision tree critical update

* Fix word case

* Fix spelling typos in expr-DT messages

* Fix word case in expr-DT messages

* Fix spaces in expr-DT messages

* Fix decision tree associativity and precedence messages

* Fix commas for double explanations: keep the accent on first clause only

* Explanation class style fixes

* Refactor frontend components

* Critical decision tree fixes

* Improve explanation hyper text

* Rollback `rawMessage` field in Explanation

* Minor skill improvement in classification

* Fix word case in expr-DT messages

* Fix decision tree explanations

* Update DT domain data

* Improve DT object name output

* Prettify explanation output

* Bump meaning tree version

* Revert "Bump meaning tree version"

This reverts commit 4641701490b04038602f04cecddafdacbcfc32e8.

* Bump meaning tree version

* Fix earlyfinish DT explanation bugs

* Minor explanation fixes

* Explanations improvements

* Fix prefix repeat bug again

* Explanations improvement

* Do not create OR aggregation if parent is aggregated with OR

* Fix comment

* Fix missing whitespaces in explan